--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
+    "react-spring": "^8.0.27",
+    "react-typical": "^0.1.3",
+    "react-typing-effect": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
