--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
     "react-spring": "^8.0.27",
+    "react-transition-group": "^4.3.0",
     "react-typical": "^0.1.3",
     "react-typing-effect": "^2.0.3"
   },
